Source code reformat and cleanup